<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:padding="24dp" >

    <TextView
        style="@style/TextLarge.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_warning"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/TextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/txt_yes"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/txt_back"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>